objects/evt__Speaker__c.object
<CustomObject>
    <customHelpPage>evt__EventManagementHelp</customHelpPage>
    <description>Special event keynote speaker profiles.</description>
    <fields>
        <fullName>evt__Event__c</fullName>
        <label>Event</label>
        <referenceTo>evt__Special_Event__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>evt__Image_URL__c</fullName>
        <description>Add or edit an image attachment to this speaker record to include an image on the event website, or override any image attachments by entering the URL of an image on another server here. Clear this field to use image attachments.</description>
        <inlineHelpText>Add or edit an image attachment to this speaker record to include an image on the event website, or override any image attachments by entering the URL of an image on another server here. Clear this field to use image attachments.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>evt__Image__c</fullName>
        <formula>IMAGE(BLANKVALUE(evt__Image_URL__c,IF(ISBLANK(evt__Profile_Image__c),&apos;/s.gif&apos;,&apos;/servlet/servlet.FileDownload?file=&apos;+evt__Profile_Image__c)), &apos;Profile Image&apos; ,60 ,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Order__c</fullName>
        <description>Integer value determining order in speakers list on website.</description>
        <inlineHelpText>Integer value determining order in speakers list on website.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__Profile_Image__c</fullName>
        <description>Attach an image file to this speaker record to populate this field with an attachment Id. If a value has been set for the Image URL field, this value will be ignored.</description>
        <inlineHelpText>Attach an image file to this speaker record to populate this field with an attachment Id. If a value has been set for the Image URL field, this value will be ignored.</inlineHelpText>
        <label>Profile Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Profile__c</fullName>
        <description>Speaker bio or profile.</description>
        <inlineHelpText>Speaker bio or profile.</inlineHelpText>
        <label>Profile</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>Speaker</label>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>